# blind-signature

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  SERVER_API.md  TODO  add_user.ps1  core.h  db.cpp  db.h  handlers.cpp  handlers.h  json_utils.cpp  json_utils.h  main.cpp  poll.cpp  poll.h  polls.cpp  polls.h  server.cpp  tests.cpp
Desktop/: main.cpp  mainwindow.cpp
core/: core.cpp  core.h  core_usage_example.cpp
db/: create_roles.sql  init_db.sql
desktop/: CMakeLists.txt  core_bridge.cpp  main.cpp  mainwindow.cpp  mainwindow.h
desktop/assets/: app.icns
desktop/net/: api_client.cpp  api_client.h  dto.h
desktop/outbox/: outbox_store.cpp  outbox_store.h  outbox_worker.cpp  outbox_worker.h
desktop/pages/: dashboard_page.cpp  dashboard_page.h  settings_page.cpp  settings_page.h  verify_page.cpp  verify_page.h
desktop/privacy/: encryptor.h  stub_encryptor.cpp  stub_encryptor.h
desktop/utils/: time.cpp  time.h
desktop/widgets/: card_frame.cpp  card_frame.h  connect_button.cpp  connect_button.h  copy_field.cpp  copy_field.h  status_badge.cpp  status_badge.h
server-side/: CMakeLists.txt  Dockerfile  db.cpp  db.h  docker-compose.yml  handlers.cpp  handlers.h  json_utils.cpp
server-side/db/: create_roles.sql
tests/: core-test.cpp  test001.cpp
